Maj cartes de films et création navbar

--- a/cinephoria-workspace/projects/cinephoria-web/src/app/features/films/components/card-films/card-films.component.html
+++ b/cinephoria-workspace/projects/cinephoria-web/src/app/features/films/components/card-films/card-films.component.html
@@ -1,15 +1,53 @@
 @for (film of items(); track film.titre) {
-<div class="card mb-3" style="width: 828px">
-  <div class="row g-0">
-    <div class="col-md-6">
-      <img src="avengers.jpg" class="img-fluid rounded-start" alt="avengers" />
-    </div>
-    <div class="card-body col-md-4">
-      <h4 class="card-title">{{ film.titre }}</h4>
-      <h5 class="card-subtitle">{{ film.acteurs }}</h5>
-      <p class="card-text">
-        {{ film.description }}
-      </p>
+<div class="container">
+  <div class="card mb-3" style="width: 828px">
+    <div class="row g-0">
+      <div class="col-md-6">
+        <img
+          src="avengers.jpg"
+          class="img-fluid rounded-start"
+          alt="avengers"
+        />
+      </div>
+      <div class="card-body col-md-4">
+        <h4 class="card-title mb-4">{{ film.titre }}</h4>
+        <h5 class="card-subtitle mb-4">{{ film.acteurs }}</h5>
+        <p class="card-text">
+          {{ film.description }}
+        </p>
+        <h6 class="card-subtitle mb-4">{{ film.genre }}</h6>
+        <h6 class="card-subtitle mb-4">
+          Age minimum : {{ film.ageMinimum }} ans
+        </h6>
+        @if (film.coupDeCoeur) {
+        <h5
+          class="card-subtitle mb-4"
+          style="color: #a57e8f; font-weight: bold; text-align: center"
+        >
+          Coup de coeur
+        </h5>
+        }
+        <!-- Etoiles représentant la note du film -->
+        <div class="rating">
+          <div class="stars-outer">
+            <img src="emptyStar.png" alt="empty star" />
+            <img src="emptyStar.png" alt="empty star" />
+            <img src="emptyStar.png" alt="empty star" />
+            <img src="emptyStar.png" alt="empty star" />
+            <img src="emptyStar.png" alt="empty star" />
+            <div
+              class="stars-inner"
+              [style.width.%]="calculateRating(film.note)"
+            >
+              <img src="filledStar.png" alt="filled star" />
+              <img src="filledStar.png" alt="filled star" />
+              <img src="filledStar.png" alt="filled star" />
+              <img src="filledStar.png" alt="filled star" />
+              <img src="filledStar.png" alt="filled star" />
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 </div>
