--- a/cinephoria-workspace/projects/cinephoria-web/src/app/features/films/components/card-films/card-films.component.css
+++ b/cinephoria-workspace/projects/cinephoria-web/src/app/features/films/components/card-films/card-films.component.css
@@ -1,3 +1,51 @@
+.container {
+  width: 100%;
+  margin: 0 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #545163;
+}
+
+.card {
+  background-color: #d4cdc9;
+}
+
+.card-body {
+  color: #545163;
+  height: auto;
+  align-content: center;
+}
+
 .card-text {
   font-size: x-small;
+}
+
+.rating {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.stars-outer {
+  display: inline-block;
+  position: relative;
+}
+
+.stars-outer img {
+  width: 40px;
+  height: 40px;
+}
+
+.stars-inner {
+  position: absolute;
+  top: 0;
+  left: 0;
+  white-space: nowrap;
+  overflow: hidden;
+}
+
+.stars-inner img {
+  width: 40px;
+  height: 40px;
 }
