--- a/cinephoria-workspace/projects/cinephoria-web/src/styles.css
+++ b/cinephoria-workspace/projects/cinephoria-web/src/styles.css
@@ -1,1 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
+html,
+body {
+  background-color: #545163;
+  width: 100%;
+}
