--- a/cinephoria-workspace/projects/cinephoria-web/src/app/features/menus/nav/nav.component.html
+++ b/cinephoria-workspace/projects/cinephoria-web/src/app/features/menus/nav/nav.component.html
@@ -1,5 +1,5 @@
-<nav class="navbar navbar-expand-lg fixed-top py-0">
-  <a class="navbar-brand" href="#">
+<nav class="navbar navbar-expand-lg py-0">
+  <a class="navbar-brand" routerLink="">
     <img src="cinema.png" alt="cinema" />
   </a>
   <button
@@ -15,26 +15,36 @@
   </button>
   <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
     <ul class="navbar-nav">
-      <li class="nav-item active">
-        <a class="nav-link" href="#">Accueil </a>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="accueil" routerLinkActive="actif"
+          >Accueil
+        </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Compte</a>
+        <a class="nav-link" routerLink="compte" routerLinkActive="actif"
+          >Compte</a
+        >
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Réservation</a>
+        <a class="nav-link" routerLink="reservation" routerLinkActive="actif"
+          >Réservation</a
+        >
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Film</a>
+        <a class="nav-link" routerLink="films" routerLinkActive="actif"
+          >Films</a
+        >
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Contact</a>
+        <a class="nav-link" routerLink="contact" routerLinkActive="actif"
+          >Contact</a
+        >
       </li>
       <li class="nav-item" id="inscription">
-        <a class="nav-link" href="#">S'inscrire</a>
+        <a class="nav-link" routerLink="inscription">S'inscrire</a>
       </li>
       <li class="nav-item" id="connexion">
-        <a class="nav-link" href="#">Se connecter</a>
+        <a class="nav-link" routerLink="connexion">Se connecter</a>
       </li>
     </ul>
   </div>
