Maj vues pages principales

--- a/cinephoria-workspace/projects/cinephoria-web/src/app/features/films/components/card-films/card-films.component.html
+++ b/cinephoria-workspace/projects/cinephoria-web/src/app/features/films/components/card-films/card-films.component.html
@@ -4,7 +4,7 @@
     <div class="row g-0">
       <div class="col-md-6">
         <img
-          src="avengers.jpg"
+          src="assets/avengers.jpg"
           class="img-fluid rounded-start"
           alt="avengers"
         />
@@ -30,20 +30,20 @@
         <!-- Etoiles représentant la note du film -->
         <div class="rating">
           <div class="stars-outer">
-            <img src="emptyStar.png" alt="empty star" />
-            <img src="emptyStar.png" alt="empty star" />
-            <img src="emptyStar.png" alt="empty star" />
-            <img src="emptyStar.png" alt="empty star" />
-            <img src="emptyStar.png" alt="empty star" />
+            <img src="assets/emptyStar.png" alt="empty star" />
+            <img src="assets/emptyStar.png" alt="empty star" />
+            <img src="assets/emptyStar.png" alt="empty star" />
+            <img src="assets/emptyStar.png" alt="empty star" />
+            <img src="assets/emptyStar.png" alt="empty star" />
             <div
               class="stars-inner"
               [style.width.%]="calculateRating(film.note)"
             >
-              <img src="filledStar.png" alt="filled star" />
-              <img src="filledStar.png" alt="filled star" />
-              <img src="filledStar.png" alt="filled star" />
-              <img src="filledStar.png" alt="filled star" />
-              <img src="filledStar.png" alt="filled star" />
+              <img src="assets/filledStar.png" alt="filled star" />
+              <img src="assets/filledStar.png" alt="filled star" />
+              <img src="assets/filledStar.png" alt="filled star" />
+              <img src="assets/filledStar.png" alt="filled star" />
+              <img src="assets/filledStar.png" alt="filled star" />
             </div>
           </div>
         </div>
