--- a/cinephoria-workspace/projects/cinephoria-web/src/app/features/films/components/card-films/card-films.component.css
+++ b/cinephoria-workspace/projects/cinephoria-web/src/app/features/films/components/card-films/card-films.component.css
@@ -1,6 +1,6 @@
 .container {
   width: 100%;
-  margin: 0 0;
+  margin: 0 0 50px;
   display: flex;
   align-items: center;
   justify-content: center;
