--- a/cinephoria-workspace/projects/cinephoria-web/src/app/features/menus/nav/nav.component.html
+++ b/cinephoria-workspace/projects/cinephoria-web/src/app/features/menus/nav/nav.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg py-0">
   <a class="navbar-brand" routerLink="">
-    <img src="cinema.png" alt="cinema" />
+    <img src="assets/cinema.png" alt="cinema" />
   </a>
   <button
     class="navbar-toggler"
