--- a/cinephoria-workspace/projects/cinephoria-web/src/app/pages/accueil/accueil.component.html
+++ b/cinephoria-workspace/projects/cinephoria-web/src/app/pages/accueil/accueil.component.html
@@ -25,7 +25,7 @@
       <button
         type="button"
         data-bs-target="#carouselFilmsRecents"
-        data-slide-to="0"
+        data-bs-slide-to="0"
         class="active"
         aria-current="true"
         aria-label="diapo1"
@@ -33,25 +33,37 @@
       <button
         type="button"
         data-bs-target="#carouselFilmsRecents"
-        data-slide-to="1"
+        data-bs-slide-to="1"
         aria-label="diapo2"
       ></button>
       <button
         type="button"
         data-bs-target="#carouselFilmsRecents"
-        data-slide-to="2"
+        data-bs-slide-to="2"
         aria-label="diapo3"
       ></button>
     </div>
     <div class="carousel-inner">
-      <div class="carousel-item active" data-bs-interval="2000">
-        <img class="w-100px" src="avengers.jpg" alt="avengers" />
+      <div class="carousel-item active">
+        <img
+          class="d-block w-100px"
+          src="/assets/avengers.jpg"
+          alt="avengers"
+        />
       </div>
       <div class="carousel-item">
-        <img class="w-100px" src="cinema.png" alt="Second slide" />
+        <img
+          class="d-block w-100px"
+          src="/assets/cinema.png"
+          alt="Second slide"
+        />
       </div>
       <div class="carousel-item">
-        <img class="w-100px" src="emptyStar.png" alt="Third slide" />
+        <img
+          class="d-block w-100px"
+          src="/assets/emptyStar.png"
+          alt="Third slide"
+        />
       </div>
     </div>
     <button
