--- a/cinephoria-workspace/projects/cinephoria-web/src/app/pages/compte/compte.component.html
+++ b/cinephoria-workspace/projects/cinephoria-web/src/app/pages/compte/compte.component.html
@@ -1,16 +1,3 @@
-<p>compte works!</p>
-<p>compte works!</p>
-<p>compte works!</p>
-<p>compte works!</p>
-<p>compte works!</p>
-<p>compte works!</p>
-<p>compte works!</p>
-<p>compte works!</p>
-<p>compte works!</p>
-<p>compte works!</p>
-<p>compte works!</p>
-<p>compte works!</p>
-<p>compte works!</p>
-<p>compte works!</p>
-<p>compte works!</p>
-<p>compte works!</p>
+<h1>Mon compte</h1>
+
+<h3>Mes commandes</h3>
