--- a/cinephoria-workspace/projects/cinephoria-web/src/app/pages/reservation/reservation.component.html
+++ b/cinephoria-workspace/projects/cinephoria-web/src/app/pages/reservation/reservation.component.html
@@ -1,1 +1,50 @@
-<p>reservation works!</p>
+<h1>Réservation</h1>
+
+<!-- Menus déroulant et input nombre-->
+<div class="container">
+  <div class="row align-items-center justify-content-center">
+    <div class="col pb-3">
+      <!-- Choix du cinéma -->
+      <div class="dropdown">
+        <button
+          class="btn dropdown-toggle"
+          type="button"
+          data-bs-toggle="dropdown"
+          aria-expanded="false"
+        >
+          Choisissez un cinéma
+        </button>
+        <ul class="dropdown-menu">
+          <li><a class="dropdown-item" href="#">Cinéma 1</a></li>
+          <li><a class="dropdown-item" href="#">Cinéma 2</a></li>
+          <li><a class="dropdown-item" href="#">Cinéma 3</a></li>
+        </ul>
+      </div>
+    </div>
+    <!-- Choix du film -->
+    <div class="col pb-3">
+      <div class="dropdown">
+        <button
+          class="btn dropdown-toggle"
+          type="button"
+          data-bs-toggle="dropdown"
+          aria-expanded="false"
+        >
+          Choisissez un film
+        </button>
+        <ul class="dropdown-menu">
+          <li><a class="dropdown-item" href="#">Film 1</a></li>
+          <li><a class="dropdown-item" href="#">Film 2</a></li>
+          <li><a class="dropdown-item" href="#">Film 3</a></li>
+        </ul>
+      </div>
+    </div>
+    <!-- Choix du nombre de places -->
+    <div class="col-auto">
+      <div class="container d-flex align-items-center" id="div-places">
+        <label for="places">Choisissez le nombre de places :</label>
+        <input type="number" id="places" name="places" min="1" max="100" />
+      </div>
+    </div>
+  </div>
+</div>
