--- a/cinephoria-workspace/projects/cinephoria-web/src/styles.css
+++ b/cinephoria-workspace/projects/cinephoria-web/src/styles.css
@@ -4,3 +4,15 @@ body {
   background-color: #545163;
   width: 100%;
 }
+
+h1 {
+  color: #d4cdc9;
+  font-weight: bold;
+  text-align: center;
+  margin: 50px 0 50px;
+}
+
+h3 {
+  color: #d4cdc9;
+  margin-bottom: 50px;
+}
