--- a/cinephoria-workspace/projects/cinephoria-web/src/app/pages/films/films.component.html
+++ b/cinephoria-workspace/projects/cinephoria-web/src/app/pages/films/films.component.html
@@ -1,3 +1,5 @@
 <h1>Films</h1>
 
-<div class="container"><app-list-films></app-list-films></div>
+<!-- <div class="container"><app-list-films></app-list-films></div> -->
+
+<button type="button" (click)="afficherFilm()">afficher film</button>
