--- a/cinephoria-workspace/projects/cinephoria-web/src/app/app.component.html
+++ b/cinephoria-workspace/projects/cinephoria-web/src/app/app.component.html
@@ -1,5 +1,7 @@
-<app-nav></app-nav>
+<!-- <app-nav></app-nav>
 
 <router-outlet></router-outlet>
 
-<app-footer></app-footer>
+<app-footer></app-footer> -->
+
+<app-administration></app-administration>
