Ajout de serveur, routes, requêtes et màj de features films et connexion admin

--- a/cinephoria-workspace/projects/cinephoria-web/src/app/features/films/components/card-films/card-films.component.css
+++ b/cinephoria-workspace/projects/cinephoria-web/src/app/features/films/components/card-films/card-films.component.css
@@ -49,3 +49,18 @@
   width: 40px;
   height: 40px;
 }
+
+.new {
+  color: #a57e8f;
+  font-weight: bold;
+  text-align: center;
+  font-size: larger;
+}
+
+#actors {
+  font-size: small;
+}
+
+#title {
+  text-align: center;
+}
