Màj page films et admin

--- a/cinephoria-workspace/projects/cinephoria-web/src/app/features/films/components/card-films/card-films.component.css
+++ b/cinephoria-workspace/projects/cinephoria-web/src/app/features/films/components/card-films/card-films.component.css
@@ -15,10 +15,12 @@
   color: #545163;
   height: auto;
   align-content: center;
+  text-align: justify;
 }
 
 .card-text {
   font-size: x-small;
+  text-align: justify;
 }
 
 .rating {
