--- a/cinephoria-workspace/projects/cinephoria-web/src/app/features/films/components/card-films/card-films.component.html
+++ b/cinephoria-workspace/projects/cinephoria-web/src/app/features/films/components/card-films/card-films.component.html
@@ -1,57 +1,64 @@
-@for (film of items(); track film.id) { @if (film.onView) {
-<div class="container">
-  <div class="card mb-3" style="width: 828px">
-    <div class="row g-0">
-      <div class="col-md-6">
-        <img
-          src="{{ film.moviePoster }}"
-          class="img-fluid rounded-start"
-          alt="{{ film.title }}"
-        />
-      </div>
-      <div class="card-body col-md-4">
-        <h4 class="card-title mb-4" id="title">{{ film.title }}</h4>
-        <h5 class="card-subtitle mb-4" id="actors">{{ film.actors }}</h5>
-        <p class="card-text">
-          {{ film.description }}
-        </p>
-        <!-- <h6 class="card-subtitle mb-4">{{ film.idTtype }}</h6> -->
-        @if (film.minAge) {
-        <h6 class="card-subtitle mb-4">Age minimum : {{ film.minAge }} ans</h6>
-        } @if (film.favorite) {
-        <h5
-          class="card-subtitle mb-2"
-          style="color: #a57e8f; font-weight: bold; text-align: center"
-        >
-          Coup de coeur
-        </h5>
-        }
-        <!-- Etoiles représentant la note du film -->
-        @if (film.opinion) {
-        <div class="rating">
-          <div class="stars-outer">
-            <img src="assets/emptyStar.png" alt="empty star" />
-            <img src="assets/emptyStar.png" alt="empty star" />
-            <img src="assets/emptyStar.png" alt="empty star" />
-            <img src="assets/emptyStar.png" alt="empty star" />
-            <img src="assets/emptyStar.png" alt="empty star" />
-            <div
-              class="stars-inner"
-              [style.width.%]="calculateRating(film.opinion)"
-            >
-              <img src="assets/filledStar.png" alt="filled star" />
-              <img src="assets/filledStar.png" alt="filled star" />
-              <img src="assets/filledStar.png" alt="filled star" />
-              <img src="assets/filledStar.png" alt="filled star" />
-              <img src="assets/filledStar.png" alt="filled star" />
+<!-- @for (film of items(); track film.title) { @if (film.onView) { -->
+<div *ngFor="let film of items()">
+  <div class="container">
+    <div class="card mb-3" style="width: 828px">
+      <div class="row g-0">
+        <div class="col-md-6">
+          <img
+            [src]="film.movieposter"
+            class="img-fluid rounded-start"
+            alt="{{ film.title }}"
+          />
+        </div>
+        <div class="card-body col-md-4">
+          <h4 class="card-title mb-4" id="title">{{ film.title }}</h4>
+          <h5 class="card-subtitle mb-4" id="actors">{{ film.actors }}</h5>
+          <p class="card-text">
+            {{ film.description }}
+          </p>
+          <h6 class="card-subtitle mb-4">
+            {{ film.type }}
+          </h6>
+
+          <h6 *ngIf="film.minage" class="card-subtitle mb-4">
+            Age minimum : {{ film.minage }} ans
+          </h6>
+
+          <h5
+            *ngIf="film.favorite"
+            class="card-subtitle mb-2"
+            style="color: #a57e8f; font-weight: bold; text-align: center"
+          >
+            Coup de coeur
+          </h5>
+
+          <!-- Etoiles représentant la note du film -->
+
+          <div *ngIf="film.opinion" class="rating">
+            <div class="stars-outer">
+              <img src="assets/emptyStar.png" alt="empty star" />
+              <img src="assets/emptyStar.png" alt="empty star" />
+              <img src="assets/emptyStar.png" alt="empty star" />
+              <img src="assets/emptyStar.png" alt="empty star" />
+              <img src="assets/emptyStar.png" alt="empty star" />
+              <div
+                class="stars-inner"
+                [style.width.%]="calculateRating(film.opinion)"
+              >
+                <img src="assets/filledStar.png" alt="filled star" />
+                <img src="assets/filledStar.png" alt="filled star" />
+                <img src="assets/filledStar.png" alt="filled star" />
+                <img src="assets/filledStar.png" alt="filled star" />
+                <img src="assets/filledStar.png" alt="filled star" />
+              </div>
             </div>
           </div>
+
+          <div *ngIf="!film.opinion" class="new"><p>Nouveau</p></div>
         </div>
-        } @if (!film.opinion) {
-        <div class="new"><p>Nouveau</p></div>
-        }
       </div>
     </div>
   </div>
 </div>
-}}
+<!-- }
+} -->
