--- a/cinephoria-workspace/projects/cinephoria-web/src/app/features/forms/add-film-form/add-film-form.component.html
+++ b/cinephoria-workspace/projects/cinephoria-web/src/app/features/forms/add-film-form/add-film-form.component.html
@@ -1,7 +1,8 @@
 <form [formGroup]="addFilmForm" (submit)="addFilm()">
   <div class="container">
-    <div class="row align-items-center">
-      <div class="col-3">
+    <div class="row align-items-center justify-content-center">
+      <div class="col-6">
+        <!-- Input titre -->
         <input
           formControlName="titre"
           type="text"
@@ -12,16 +13,18 @@
           placeholder="Nom du film"
         />
 
-        <input
+        <!-- input acteurs -->
+        <textarea
           formControlName="actors"
-          type="text"
           class="form-control-sm"
           id="actors"
           required
           placeholder="Acteurs"
-        />
-      </div>
-      <div class="col-7">
+          rows="3"
+          cols="30"
+        ></textarea>
+
+        <!-- Input description -->
         <textarea
           formControlName="description"
           class="form-control-sm"
@@ -32,19 +35,79 @@
           cols="30"
         ></textarea>
       </div>
-      <div class="col-2 text-align-center">
-        <div id="div-img-upload">
+
+      <div class="col-2 d-flex flex-column align-items-center">
+        <!-- Input âge minimum -->
+        <div class="mb-3">
+          <input
+            type="number"
+            id="minAge"
+            name="minAge"
+            min="12"
+            max="18"
+            placeholder="Age minimum"
+          />
+        </div>
+        <!-- Input coup de coeur -->
+        <div class="d-flex mb-3">
+          <div>
+            <label for="favorite">Coup de coeur</label>
+          </div>
+          <div>
+            <input type="checkbox" id="favorite" name="favorite" />
+          </div>
+        </div>
+
+        <!-- Input note -->
+        <div class="mb-3">
+          <input
+            type="number"
+            id="opinion"
+            name="opinion"
+            min="0"
+            max="5"
+            step="0.1"
+            placeholder="Note"
+          />
+        </div>
+
+        <!-- Input à l'affiche -->
+        <div class="d-flex">
+          <div>
+            <label for="onView">A l'affiche</label>
+          </div>
+          <div>
+            <input type="checkbox" id="onView" name="onView" />
+          </div>
+        </div>
+      </div>
+
+      <div class="col">
+        <!-- Input affiche du film -->
+        <div class="col" id="div-img-upload">
           <label for="affiche">
-            <img src="assets/image.png" alt="add-affiche" id="affiche-film" />
+            <img
+              src="assets/image.png"
+              alt="add-affiche"
+              id="affiche-film"
+              title="Cliquez pour télécharger une image"
+            />
             <input
               type="file"
               id="affiche"
               name="affiche"
               accept="image/*"
               style="display: none"
+              (change)="showFileName($event)"
             />
           </label>
         </div>
+        <div id="file-name-container" style="display: none; margin-top: 10px">
+          <h5 class="me-2">Fichier sélectionné :</h5>
+          <p id="file-name"></p>
+        </div>
+
+        <!-- Bouton ajouter le film -->
         <div>
           <button type="submit" class="btn">Ajouter</button>
         </div>
