--- a/cinephoria-workspace/projects/cinephoria-web/src/app/pages/accueil/accueil.component.html
+++ b/cinephoria-workspace/projects/cinephoria-web/src/app/pages/accueil/accueil.component.html
@@ -23,46 +23,25 @@
   <div id="carouselFilmsRecents" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-indicators">
       <button
+        *ngFor="let film of listFilms; let i = index"
         type="button"
         data-bs-target="#carouselFilmsRecents"
-        data-bs-slide-to="0"
-        class="active"
+        data-bs-slide-to="i"
+        [class.active]="i === 0"
         aria-current="true"
-        aria-label="diapo1"
-      ></button>
-      <button
-        type="button"
-        data-bs-target="#carouselFilmsRecents"
-        data-bs-slide-to="1"
-        aria-label="diapo2"
-      ></button>
-      <button
-        type="button"
-        data-bs-target="#carouselFilmsRecents"
-        data-bs-slide-to="2"
-        aria-label="diapo3"
+        aria-label="'diapo' + (i + 1)"
       ></button>
     </div>
     <div class="carousel-inner">
-      <div class="carousel-item active">
+      <div
+        *ngFor="let film of listFilms; let i = index"
+        class="carousel-item"
+        ngClass="{ 'active': i === 0 }"
+      >
         <img
           class="d-block w-100px"
-          src="/assets/avengers.jpg"
-          alt="avengers"
-        />
-      </div>
-      <div class="carousel-item">
-        <img
-          class="d-block w-100px"
-          src="/assets/cinema.png"
-          alt="Second slide"
-        />
-      </div>
-      <div class="carousel-item">
-        <img
-          class="d-block w-100px"
-          src="/assets/emptyStar.png"
-          alt="Third slide"
+          [src]="film.movieposter"
+          [alt]="film.title"
         />
       </div>
     </div>
