--- a/cinephoria-workspace/projects/cinephoria-web/src/app/pages/connexion/connexion.component.html
+++ b/cinephoria-workspace/projects/cinephoria-web/src/app/pages/connexion/connexion.component.html
@@ -1,3 +1,5 @@
-<h1>Connexion</h1>
+<div>
+  <h1>Connexion</h1>
 
-<app-connexion-form></app-connexion-form>
+  <app-connexion-form></app-connexion-form>
+</div>
