Navigation de films vers séances

--- a/cinephoria-workspace/projects/cinephoria-web/src/app/features/films/components/card-films/card-films.component.css
+++ b/cinephoria-workspace/projects/cinephoria-web/src/app/features/films/components/card-films/card-films.component.css
@@ -1,3 +1,13 @@
+button {
+  background-color: #a57e8f;
+  color: #d4cdc9;
+  margin-top: 8px;
+}
+
+button:hover {
+  background-color: #a57e8f93;
+}
+
 .container {
   width: 100%;
   margin: 0 0 50px;
