--- a/cinephoria-workspace/projects/cinephoria-web/src/app/features/forms/connexion-form/connexion-form.component.html
+++ b/cinephoria-workspace/projects/cinephoria-web/src/app/features/forms/connexion-form/connexion-form.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="col d-flex flex-row justify-content-center align-items-center">
-    <form [formGroup]="connexionForm" (submit)="connexion()">
+    <form [formGroup]="connexionForm" (submit)="login()">
       <div>
         <label for="email" class="form-label">Adresse mail</label>
         <br />
