--- a/cinephoria-workspace/projects/cinephoria-web/src/app/features/menus/nav/nav.component.html
+++ b/cinephoria-workspace/projects/cinephoria-web/src/app/features/menus/nav/nav.component.html
@@ -40,11 +40,16 @@
           >Contact</a
         >
       </li>
-      <li class="nav-item" id="inscription">
+      <li class="nav-item" id="inscription" *ngIf="!isAuthenticated">
         <a class="nav-link" routerLink="inscription">S'inscrire</a>
       </li>
-      <li class="nav-item" id="connexion">
+      <li class="nav-item" id="connexion" *ngIf="!isAuthenticated">
         <a class="nav-link" routerLink="connexion">Se connecter</a>
+      </li>
+      <li class="nav-item" id="deconnexion" *ngIf="isAuthenticated">
+        <a class="nav-link" routerLink="connexion" (click)="logout()"
+          >Déconnexion</a
+        >
       </li>
     </ul>
   </div>
