Màj authentification admin

--- a/cinephoria-workspace/projects/cinephoria-web/src/app/pages/reservation/reservation.component.html
+++ b/cinephoria-workspace/projects/cinephoria-web/src/app/pages/reservation/reservation.component.html
@@ -52,5 +52,6 @@
 </div>
 
 <div *ngIf="selectedCinema">
+  <h3>Séances disponibles {{ selectedCinema.name | cinemaName }}</h3>
   <app-card-sessions [items]="listSessions"></app-card-sessions>
 </div>
