Fonction confirmation réservation

--- a/projects/cinephoria-web/src/app/features/booking/seat-selection/seat-selection.component.html
+++ b/projects/cinephoria-web/src/app/features/booking/seat-selection/seat-selection.component.html
@@ -10,7 +10,7 @@
   <div *ngIf="selectedSeats.length === 0">
     <p>Aucun siège réservé.</p>
   </div>
-  <button type="button" class="btn" (click)="confirmReservation()">
+  <button type="button" class="btn" (click)="confirm()">
     Confirmer la réservation
   </button>
 </div>
