--- a/projects/cinephoria-web/src/app/features/films/components/film-booking/film-booking.component.html
+++ b/projects/cinephoria-web/src/app/features/films/components/film-booking/film-booking.component.html
@@ -32,5 +32,7 @@
     </div>
   </div>
 
-  <app-seat-selection></app-seat-selection>
+  <app-seat-selection
+    (confirmReservationEvent)="confirmReservation($event)"
+  ></app-seat-selection>
 </div>
