Maj sélection des sièges

--- a/projects/cinephoria-web/src/app/features/films/components/film-booking/film-booking.component.html
+++ b/projects/cinephoria-web/src/app/features/films/components/film-booking/film-booking.component.html
@@ -34,5 +34,6 @@
 
   <app-seat-selection
     (confirmReservationEvent)="confirmReservation($event)"
+    [reservedSeats]="this.session[0].reservedSeats"
   ></app-seat-selection>
 </div>
