Ajout réservations sur page compte

--- a/projects/cinephoria-web/src/app/pages/compte/compte.component.html
+++ b/projects/cinephoria-web/src/app/pages/compte/compte.component.html
@@ -1,3 +1,7 @@
-<h1>Mon compte</h1>
+<div class="container">
+  <h1>Mon compte</h1>
 
-<h3>Mes commandes</h3>
+  <h3>Mes réservations</h3>
+
+  <app-list-orders></app-list-orders>
+</div>
